@@ -4,33 +4,50 @@ import java.awt.*;
 import java.util.ArrayList;
 import java.util.List;
 
-public class Truck <Cargo> extends Motor_vehicle{
+public class Truck <Cargo> extends Motor_vehicle {
     private final int nrDoors; // Number of doors on the car
     private Color color; // Color of the vehicle
-    private final String modelName; // The name model
     private final List<Cargo> truckCargo;
 
-    public Truck(int nrDoors, double enginePower, Color color, String modelName){
+
+    public Truck(int nrDoors, double enginePower, Color color, String modelName, String imagePath) {
         this.nrDoors = nrDoors;
         setEnginePower(enginePower);
         this.color = color;
-        this.modelName = modelName;
+
+        setModelName(modelName);
+        setImagePath(imagePath);
+
         this.truckCargo = new ArrayList<>();
         stopEngine();
     }
 
     // getter-function that returns the number of doors a car has
-    public int getNrDoors(){ return nrDoors; }
+    public int getNrDoors() {
+        return nrDoors;
+    }
 
-    public List<Cargo> getTruckCargo(){ return truckCargo; }
+    public List<Cargo> getTruckCargo() {
+        return truckCargo;
+    }
 
     // getter-function that returns the color of the car
-    public Color getColor(){ return color; }
+    public Color getColor() {
+        return color;
+    }
 
     // setter-function to set the color of the car
-    public void setColor(Color clr){ color = clr; }
+    public void setColor(Color clr) {
+        color = clr;
+    }
 
-    public void Load(Cargo cargo){ truckCargo.add(cargo); }
+    public void Load(Cargo cargo) {
+        truckCargo.add(cargo);
+    }
 
-    public void Off_Load(){ truckCargo.removeLast(); }
+    public void offLoad() {
+        if (!truckCargo.isEmpty()) {
+            truckCargo.remove(truckCargo.size() - 1);
+        }
+    }
 }
